[package]
name = "digitalocean-dyn-domain"
version = "0.1.0"
authors = ["Spike Grobstein <me@spike.cx>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
ureq = { version = "0.11.3", features = ["json"] }
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.45"

